--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ decorator==4.4.2
 imageio==2.9.0
 kiwisolver==1.3.1
 matplotlib==3.3.4
+natsort==7.1.1
 networkx==2.5
 numpy==1.20.1
 opencv-python==4.5.1.48
