--- a/environment.yml
+++ b/environment.yml
@@ -3,13 +3,17 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
-  - ca-certificates=2021.1.19=h06a4308_1
+  - blas=1.0=openblas
+  - ca-certificates=2021.4.13=h06a4308_1
   - certifi=2020.12.5=py39h06a4308_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
   - libffi=3.3=he6710b0_2
   - libgcc-ng=9.1.0=hdf63c60_0
+  - libgfortran-ng=7.3.0=hdf63c60_0
+  - libopenblas=0.3.13=h4367d64_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - ncurses=6.2=he6710b0_1
+  - numpy-base=1.19.2=py39h0f7b65f_0
   - openssl=1.1.1k=h27cfd23_0
   - pip=21.0.1=py39h06a4308_0
   - python=3.9.2=hdb3f193_0
@@ -24,19 +28,25 @@ dependencies:
   - pip:
     - cycler==0.10.0
     - decorator==4.4.2
+    - dlib==19.22.0
     - imageio==2.9.0
+    - imutils==0.5.4
+    - joblib==1.0.1
     - kiwisolver==1.3.1
     - matplotlib==3.3.4
     - natsort==7.1.1
     - networkx==2.5
     - numpy==1.20.1
+    - opencv-contrib-python==4.5.1.48
     - opencv-python==4.5.1.48
     - pillow==8.1.2
     - pyparsing==2.4.7
     - python-dateutil==2.8.1
     - pywavelets==1.1.1
     - scikit-image==0.18.1
+    - scikit-learn==0.24.1
     - scipy==1.6.2
     - six==1.15.0
+    - threadpoolctl==2.1.0
     - tifffile==2021.3.17
 prefix: /home/david/miniconda3/envs/sci
