--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,24 @@
 certifi==2020.12.5
 cycler==0.10.0
 decorator==4.4.2
+dlib==19.22.0
 imageio==2.9.0
+imutils==0.5.4
+joblib==1.0.1
 kiwisolver==1.3.1
 matplotlib==3.3.4
 natsort==7.1.1
 networkx==2.5
 numpy==1.20.1
+opencv-contrib-python==4.5.1.48
 opencv-python==4.5.1.48
 Pillow==8.1.2
 pyparsing==2.4.7
 python-dateutil==2.8.1
 PyWavelets==1.1.1
 scikit-image==0.18.1
+scikit-learn==0.24.1
 scipy==1.6.2
 six==1.15.0
+threadpoolctl==2.1.0
 tifffile==2021.3.17
